--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS & Javascript Working Calculator UI Design | Claymorphism</title>
+  <title>Calculator | Dark & light mode | CSS & Javascript Working Calculator UI Design | Claymorphism</title>
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+  <div class="btn">
+    <strong>🌞</strong>
+    <strong>🌙</strong>
+  </div>
   <div class="container">
     <form name="calc" class="calculator">
       <input type="text" class="value" readonly name="txt"/>
@@ -31,5 +35,12 @@
       <span class="num equal" onclick="document.calc.txt.value=eval(calc.txt.value)"><i>=</i></span>
     </form>
   </div>
+  <script>
+    let body = document.querySelector('body')
+    let btn = document.querySelector('.btn')
+    btn.onclick = function() {
+      body.classList.toggle('light')
+    }
+  </script>
 </body>
 </html>
